--- a/src/Components/Header.css
+++ b/src/Components/Header.css
@@ -2,9 +2,15 @@
     background-image: url("../assets/app\ backround\ copy.png");
     background-size: cover;
     width: 100%;
-    height: 761px;
+    height: 762px;
   
     font-family: "Poppins", sans-serif;
+  }
+  .embg{
+    background-image: url("../assets/emergency.png");
+    background-size: cover;
+    width: 100%;
+    height: 762px;
   }
   img {
     width: 150px;
