--- a/src/Components/Header.css
+++ b/src/Components/Header.css
@@ -4,9 +4,11 @@ body {
 
 .header {
   background-image: url("../assets/final\ backround.png");
+  background-position: center;
+  background-repeat: no-repeat;
   background-size: cover;
   width: 100%;
-  height: 762px;
+  height: 780px;
   font-family: "Poppins", sans-serif;
 }
 .embg {
