--- a/src/Components/Header.css
+++ b/src/Components/Header.css
@@ -8,14 +8,14 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
   width: 100%;
-  height: 780px;
+  height: 100vh;
   font-family: "Poppins", sans-serif;
 }
 .embg {
   background-image: url("../assets/emergency.png");
   background-size: cover;
   width: 100%;
-  height: 762px;
+  height: 100vh;
 }
 img {
   width: 150px;
@@ -86,7 +86,7 @@ li {
   display: flex;
   flex-wrap: wrap;
   color: #fff;
-  font: 100 24px/100px sans-serif;
+  /* font: 100 24px/100px sans-serif; */
   height: 200px;
 }
 .contenu div {
@@ -115,7 +115,7 @@ li {
 }
 
 .card {
-  display: flex;
+  display: inline-flex;
   background: rgba(255, 255, 255, 0.13);
   border-radius: 10px;
   flex: 1 1 0px;
@@ -123,8 +123,9 @@ li {
   align-items: center;
   font-size: 2.0rem;
   letter-spacing: 3px;
-  padding: 33px 60px;
-  margin: 70px 95px;
+  padding: 2.5rem 0.2rem;
+  text-align: center;
+  margin: 65px 95px;
   margin-bottom: 0;
   height: 70px;
   box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
@@ -132,9 +133,7 @@ li {
   -webkit-backdrop-filter: blur(3.9px);
   border: 1px solid rgba(255, 255, 255, 0.12);
 }
-.card p {
-  opacity: 100%;
-}
+
 .blanc img {
   width: 45px;
   height: 45px;
@@ -144,10 +143,10 @@ li {
 }
 .contenu {
   margin: auto;
-  width: 90%;
+  width: 80%;
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: space-evenly;
   align-items: center;
   margin-top: 20px;
 }
